--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "cookies-next": "^2.0.4",
     "@glidejs/glide": "^3.4.1",
     "@reach/accordion": "^0.16.1",
     "@redq/reuse-modal": "^1.1.9",
     "@styled-system/theme-get": "^5.1.2",
     "animate.css": "^4.1.1",
+    "cookies-next": "^2.0.4",
     "next": "^11.1.2",
     "next-compose-plugins": "^2.2.1",
     "next-fonts": "1.5.1",
@@ -44,6 +44,7 @@
     "react-image": "^4.0.3",
     "react-image-gallery": "1.2.7",
     "react-masonry-component": "^6.2.1",
+    "react-moving-text": "^0.0.7",
     "react-parallax": "^3.3.0",
     "react-parallax-component": "^1.0.6",
     "react-responsive": "^9.0.0-beta.4",
@@ -58,7 +59,8 @@
     "styled-components": "^5.2.1",
     "styled-system": "5.1.5",
     "swiper": "^7.0.6",
-    "tsparticles": "^1.35.2"
+    "tsparticles": "^1.35.2",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.11.1",
